--- a/app/server/views/index.ejs
+++ b/app/server/views/index.ejs
@@ -19,7 +19,7 @@
     <body>
     
            <div class="bg">
-          <img src="https://tsh.io/wp-content/uploads/2022/05/new-nodejs-features-19-20.png"> <h1>Bonjour , j'ai changé l'affichage
+          <img src="https://tsh.io/wp-content/uploads/2022/05/new-nodejs-features-19-20.png"> <h1>Bonjour , cyrine
            </h1> </div>
        
     </body>
